--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
     <depend>rclcpp</depend>
     <depend>ros2_shared</depend>
     <depend>sensor_msgs</depend>
+    <depend>image_transport</depend>
 
     <export>
         <build_type>ament_cmake</build_type>
